[package]
name = "DiscordBotWithRust"
version = "0.1.0"
authors = ["ryo50"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rss = { version = "1.0", features = ["from_url"] }
clap = "2.31.2"
serde = "1.0.33"
serde_json = "1.0.12"
serde_derive = "1.0.33"